# voca-ai-engine

./: .dockerignore  .env  .gitignore  README.md  architecture-overview.ts  docker-compose.yml  env.example  main.py  package-lock.json  package.json  requirements.txt  requirements.webhook.txt  start-services.sh  stop-services.sh
api/: __init__.py
api/clients/: voca_service_client.py
api/middleware/: __init__.py  auth.py
api/models/: __init__.py  agent.py  channel.py  provisioning.py
api/routes/: __init__.py  agent_provisioning.py  agent_routes.py  health.py  message_routing.py  provisioning_routes.py  service_router.py  service_status.py  webhook_routes.py  webhooks.py
api/utils/: __init__.py  agent_utils.py
app/: main.py
aws/: README.md  deploy.sh
aws/ecs-services/: voca-ai-engine-service.json  (+2 more)
config/: __init__.py  settings.py
core/: __init__.py  context_manager.py
docker/: Dockerfile  Dockerfile.elizaos  Dockerfile.voca-ai-engine  Dockerfile.voca-connect  Dockerfile.voca-os  Dockerfile.webhook
shared-utils/: README.md  pyproject.toml  requirements.txt  setup.py
shared-utils/voca_engine_shared_utils/: __init__.py
shared-utils/voca_engine_shared_utils/clients/: __init__.py  voca_service_client.py
shared-utils/voca_engine_shared_utils/core/: __init__.py  config.py  database.py  logger.py
shared-utils/voca_engine_shared_utils/db/: __init__.py  models.py
shared-utils/voca_engine_shared_utils/helpers/: __init__.py  auth.py  serializer.py
shared-utils/voca_engine_shared_utils/utils/: __init__.py  auth.py  auth_helpers.py  response_helpers.py
(+80 files in other folders)
